Prevent the question index from wrapping

--- a/src/styles/utils.css
+++ b/src/styles/utils.css
@@ -9,3 +9,9 @@
 .text-center {
   text-align: center;
 }
+
+/* Whitespace */
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
